--- a/plugin/webContent/join/join.html
+++ b/plugin/webContent/join/join.html
@@ -154,7 +154,8 @@
     <span class="ensure_load generateSql">生成SQL</span>
 
 </div>
-<div class="fromInp" style="margin-top: 44px;">
+<div class="form_title">属性设置</div>
+<div class="fromInp" style="margin-top: 12px;">
     <label>步骤名称：</label>
     <input type="text" class="stepName auto_save" readonly="readonly"/>
 </div>
