--- a/html/flowChart.html
+++ b/html/flowChart.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="../css/gooflow/default.css"/>
     <style>
         .myForm{display:block;margin:0px;padding:0px;line-height:1.5;font: 12px Arial, Helvetica, sans-serif;margin:5px 5px 0px 0px;border-radius:4px;}
-        .myForm .form_title{background:#428bca;padding:4px;color:#fff;border-radius:3px 3px 0px 0px;}
+        .myForm .form_title{background:#f7f9fc;font-size: 14px;color:#3D5275;height: 36px;line-height: 36px;  text-align: center;border-top: 1px solid #f1f1f1;  border-bottom: 1px solid #f1f1f1;}
         .myForm .form_content{padding:4px;background:#fff;}
         .myForm .form_content table{border:0px}
         .myForm .form_content table td{border:0px}
@@ -53,6 +53,7 @@
       var this_versionId = localStorage.getItem("versionId");
       var this_onenv = sessionStorage.getItem("onEnv"); //切换环境
       var onenv = true;
+      var this_new = true;
       var this_webComponentId;
       var this_actionCompType;
       var $url = '../xdbd-etl'; ///xdbd-etl
@@ -77,7 +78,7 @@
         haveHead:true,
 //        headLabel:true,
         initLabelText:'流程图',
-        headBtns:["new","undo","redo","reload","print","preview","execute","saveCopy"],//如果haveHead=true，则定义HEAD区的按钮  "save",
+        headBtns:["undo","redo","reload","print","preview","execute","saveCopy"],//如果haveHead=true，则定义HEAD区的按钮  "save""new",,
         haveTool:onenv,
         haveDashed:true,
         haveGroup:true,
@@ -94,7 +95,7 @@
         input:"表输入结点",
         join:"关联结点",
         group:"组织划分框编辑开关",
-        'new':"新建",
+//        'new':"新建",
         undo:"上一步",
         redo:"下一步",
         reload:"刷新",
@@ -150,9 +151,19 @@
           return true;
         };
         //新建流程图
-        demo.onBtnNewClick=function() {
-         window.location.href = 'etlStencil.html';
-        };
+//        demo.onBtnNewClick=function() {
+//          if(this_new) {
+//            layer.confirm('是否需要保存当前内容？', {
+//              btn: ['确定','取消'] //按钮
+//            }, function(){
+//              fn_saveActionComp_exec(Export());
+//            }, function(){
+//              window.location.href = 'etlStencil.html';
+//            });
+//          } else {
+//            window.location.href = 'etlStencil.html';
+//          }
+//        };
         //刷新流程图
         demo.onFreshClick=function() {
           location.reload();
@@ -226,14 +237,8 @@
         }
       };
       var out;
-//      dags = JSON.stringify(demo.exportData());
       function Export(){
-        // console.log(JSON.stringify(demo.exportData()))
-//          document.getElementById("result").value=JSON.stringify(demo.exportData());
           return JSON.stringify(demo.exportData());
-      }
-      function ResetScale(){
-        demo.resetScale( parseFloat(document.getElementById("wheelDelta").value) );
       }
       // 鼠标滚动流程图放大缩小
       //var rum = 1;
@@ -443,6 +448,7 @@
           success:function(data){
             if(data.success){
 //              layer.msg('保存成功')
+              this_new = false;
               init_actionComp();
             } else {
               layer.msg(data.message,{time: 1000})
@@ -587,6 +593,27 @@
                 layer.msg('删除成功',{time: 1000})
               }else {
                 layer.msg(data.message,{time: 1000})
+              }
+            },error:function(data){
+              layer.msg(JSON.stringify(data))
+            }
+          })
+        }
+        //ETL保存
+        function init_updateDay() {
+          $.ajax({
+            type:"POST",
+            url:$url+"/api/action/v1/updateDay",
+            dataType:"json",
+            contentType:"application/json",
+            data:JSON.stringify({
+              "actionId": this_actionId,
+              "versionId": this_versionId,
+              "dag": Export()
+            }),
+            success:function(data){
+              if(data.code == 0) {
+//                layer.msg('',{time: 1000})
               }
             },error:function(data){
               layer.msg(JSON.stringify(data))
