--- a/html/flowChart.html
+++ b/html/flowChart.html
@@ -21,14 +21,14 @@
             cursor: pointer;}
         .myForm .form_content .form_profile tr td.add_Btn:hover{background: #2e8ded}
         .myForm .form_btn_div{text-align:center;border-top:#ccc 1px solid;background:#f5f5f5;padding:4px;border-radius:0px 0px 3px 3px;}
-        #propertyForm{overflow: hidden}
+        #propertyForm{overflow: hidden; height: 500px; overflow-y: visible}
         .hide{display: none;}
         .list{  font-size: 14px;  color: #3D5275;  }
         .list thead{  background: #e2e2e2;color: #2f3238;  }
         .list thead tr.list_head{height: 36px;line-height: 36px;color: #666;}
         .list tbody tr td{  border: 1px solid #ccc;  padding: 3px;}
         .padlock{width: 90px;height: 30px;margin: 10px auto;background: #578FE6;color: #fff;line-height: 30px;text-align: center;border-radius: 5px;cursor: pointer;font-size: 14px;}
-        .showSql{padding: 5px;overflow: hidden;margin: 10px;line-height: 20px;text-indent: 28px;font-size: 14px;}
+        .showSql{padding: 5px;overflow: hidden;margin: 10px;line-height: 20px;text-indent: 28px;font-size: 14px;height: 200px;overflow-y:visible}
     </style>
     <script type="text/javascript" src="../plugin/gooflow/jquery.min.js"></script>
     <script src="../js/login.js"></script>
