--- a/main.html
+++ b/main.html
@@ -52,9 +52,9 @@
 				font-weight: 600;
 			}
 			.list-group-item {
-				white-space: nowrap;
 				overflow: hidden;
 				text-overflow: ellipsis;
+				white-space: nowrap;
 			}
 			.treeview-head>span {
 				font-size: 12px;
@@ -64,6 +64,10 @@
 			.treeview-head .fa {
 				font-size: 16px;
 				margin-right: 4px;
+			}
+			.col-sm-12 {
+				padding-right:0 ;
+				width: auto;
 			}
 	</style>
     <!--[if lt IE 9]>
