修改小道为神脑大数据

--- a/main.html
+++ b/main.html
@@ -81,7 +81,7 @@
 					<div class="ban-main">
 						<img src="images/ban.png" alt="" />
 						<a href="index.html" class="logo-link">
-							<img src="images/logo.png" alt="" title="小道科技" />
+							<!--<img src="images/logo.png" alt="" title="小道科技" />-->
 						</a>
 						<div class="user-box">
 							<!--<div class="msg-unread">
