--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <div id="header">
 	<div class="head-bar main">
 		<a href="#">
-			<img src="images/logo.png" alt="" />
+			<!--<img src="images/logo.png" alt="" />-->
 		</a>
 		<ul>
 			<li>
@@ -53,8 +53,8 @@
 </div>
 <div id="footer" class="hidden">
 	<div class="foot-bar main">
-		<p>深圳市南山区科技园东方科技大厦505-507室</p>
-		<p>Copyright ©2017 深圳小道科技有限公司 版权所有 粤ICP备 11298888号-6</p>
+		<p>深圳市南山区科技园东方科技大厦816室</p>
+		<p>Copyright ©2017 深圳深脑大树据有限公司 版权所有 粤ICP备 11298888号-6</p>
 	</div>
 </div>
 
