--- a/plugin/webContent/input/input.html
+++ b/plugin/webContent/input/input.html
@@ -16,21 +16,6 @@
             color: #fff;
             cursor: pointer;
         }
-        /*.ensure_save{*/
-            /*display: inline-block;*/
-            /*height: 12px;*/
-            /*width: 12px;*/
-            /*background: url(../../../images/save.png) no-repeat center;*/
-            /*cursor: pointer;*/
-        /*}*/
-        /*.ensure_create{*/
-            /*display: inline-block;*/
-            /*margin-left: 12px;*/
-            /*height: 12px;*/
-            /*width: 12px;*/
-            /*background: url(../../../images/shengchengSQL.png) no-repeat center;*/
-            /*cursor: pointer;*/
-        /*}*/
         .fromInp {
             margin: 0 12px 14px;
             
@@ -97,24 +82,14 @@
         <div class="form_title">属性设置</div>
         <div class="fromInp" style="margin-top: 12px;">
             <label>步骤名称：</label>
-            <input type="text" class="stepName auto_save" readonly="readonly"/>
+            <input type="text" class="stepName auto_save" value=""/>
         </div>
-        <!--<div class="fromInp">-->
-            <!--<label>输出表名：</label>-->
-            <!--<input type="text"/>-->
-        <!--</div>-->
         <div class="fromInp">
             <label>选择表：</label>
             <select class="fromTable auto_save" style="width:160px;height: 28px;margin-left: 25px;">
-
             </select>
             <!--<input id="input" name="input" class="iInput">-->
         </div>
-<!--
-        <div class="fromInp">
-            <label>列名：</label>
-            <input style="margin-left: 38px" type="text" />
-        </div>-->
         <div class="fromInp">
             <label style="float: left;">提取字段：</label>
             <div class="extractFields" style="float: left;">
