--- a/html/preview.html
+++ b/html/preview.html
@@ -54,6 +54,7 @@
 <script src="../plugin/jQuery/jQuery_ui.js"></script>
 <script src="../plugin/zTree/jquery.ztree.all.min.js"></script>
 <script src="../plugin/d3/d3.v3.min.js"></script>
+<script src="../plugin/d3/d3.tip.js"></script>
 <!--存放3D转化封装的函数-->
 <script src="../js/login.js"></script>
 <script src="../js/preview.js"></script>
