--- a/editBI.html
+++ b/editBI.html
@@ -41,7 +41,7 @@
 			<img data-tip="粘贴" src="images/icon_paste.png" alt="" onclick="operating.paste(id_)" />		<!--粘贴-->
 			<!--<img src="images/icon_move.png" alt="" />-->
 			<!--<img src="images/icon_temp.png" alt="" />-->
-			<img data-tip="删除" src="images/delete_01.png" alt="" onclick="operating.clickDelete(id_);" />		<!--删除-->
+			<img data-tip="删除" src="images/delete_01.png" alt="" onclick="operating.deteteask(id_);" />		<!--删除-->
 			<!--<img src="images/icon_new.png" alt="" />-->
 			<div class="set-index-box fr">
 				<input type="checkbox" name="" id="" value="" />
