--- a/editBI.html
+++ b/editBI.html
@@ -466,7 +466,7 @@
 			<ul class="clearfix">
 				<li class="fl">
 					<img src="images/icon_circle_on.png" alt="" />
-					<input type="radio" name="range" checked="true"/>
+					<input type="radio" name="range" checked="checked"/>
 					<span>范围</span>
 				</li>
 				<li class="fl">
