--- a/html/menuSet.html
+++ b/html/menuSet.html
@@ -206,29 +206,29 @@
 								</div>
 							</div>
 							<div class="m-cont2">
-										<div class="m-scroll-navs">
-											<div class="swiper-container">
-										    <div class="swiper-wrapper" id="link-scrollmenu">
-										        <!--<div class="swiper-slide">Slide 1</div>
-										        <div class="swiper-slide">Slide 2</div>
-										        <div class="swiper-slide">Slide 3</div>
-										        <div class="swiper-slide">Slide 4</div>-->
-										    </div>
-										    <div class="swiper-button-prev"></div>
-										    <div class="swiper-button-next"></div>
-										  </div>
-										  <div class="desp-link-tree">
-										  	<span>左边菜单</span>
-										  	<span>创建链接</span>
-										  </div>
-										  <div class="match-menu-box">
-										  	<ul id="link-tree" class="ztree showIcon"></ul>
-										  </div>
-											<div class="set-link-btn-box">
-												<button id="del-pagelink-btn" class="set-link-btn">取消链接</button>
-												<button id="clear-pagelink-btn" class="set-link-btn">清除链接</button>
-											</div>
+									<div class="m-scroll-navs">
+										<div class="swiper-container">
+										<div class="swiper-wrapper" id="link-scrollmenu">
+											<!--<div class="swiper-slide">Slide 1</div>
+											<div class="swiper-slide">Slide 2</div>
+											<div class="swiper-slide">Slide 3</div>
+											<div class="swiper-slide">Slide 4</div>-->
 										</div>
+										<div class="swiper-button-prev"></div>
+										<div class="swiper-button-next"></div>
+									  </div>
+									  <div class="desp-link-tree">
+										<span>左边菜单</span>
+										<span>创建链接</span>
+									  </div>
+									  <div class="match-menu-box">
+										<ul id="link-tree" class="ztree showIcon"></ul>
+									  </div>
+										<div class="set-link-btn-box">
+											<button id="del-pagelink-btn" class="set-link-btn">取消链接</button>
+											<button id="clear-pagelink-btn" class="set-link-btn">清除链接</button>
+										</div>
+									</div>
 							</div>
 						</div>
 					</div>
@@ -243,11 +243,22 @@
 									<img src="../images/mlogo.png" alt=""/>
 								</a>
 								<p class="mn-headtxt">小道科技欢迎您！</p>
-								<ul class="mn-menu clearfix">
+								<a href="javascript:void(0)" class="zuo1">
+									<span style="">
+										<i class="fa fa-hand-o-left"></i>
+									</span>
+								</a>
+								<ul class="mn-menu clearfix" id="setAllTop">
 									<!--<li class="active"><a href="javascript:;">财务</a></li>
 									<li><a href="javascript:;">产品</a></li>
 									<li><a href="javascript:;">运输</a></li>-->
 								</ul>
+								<a href="javascript:void(0)" class="you1">
+									<span style="">
+										<i class="fa fa-hand-o-right"></i>
+									</span>
+								</a>
+								<input type="hidden" value="0" id="jishu" />
 							</div>
 							<div class="mn-sider">
 								<ul id="sidebar-tree" class="ztree showIcon"></ul>
