--- a/html/preview.html
+++ b/html/preview.html
@@ -28,11 +28,22 @@
                             <img src="../images/mlogo.png" alt="" />
                         </a>
                         <p class="mn-headtxt">小道科技欢迎您！</p>
+                        <a href="javascript:void(0)" class="zuo1">
+									<span style="">
+										<i class="fa fa-hand-o-left"></i>
+									</span>
+                        </a>
                         <ul class="mn-menu clearfix">
                             <!--<li class="active"><a href="javascript:;">财务</a></li>
                             <li><a href="javascript:;">产品</a></li>
                             <li><a href="javascript:;">运输</a></li>-->
                         </ul>
+                        <a href="javascript:void(0)" class="you1">
+									<span style="">
+										<i class="fa fa-hand-o-right"></i>
+									</span>
+                        </a>
+                        <input type="hidden" value="0" id="jishu" />
                     </div>
                     <div class="mn-sider">
                         <ul id="sidebar-tree" class="ztree"></ul>
