--- a/html/preview.html
+++ b/html/preview.html
@@ -14,6 +14,9 @@
         .resize-item{border: 0;}
         .content-text.active{ background-color: inherit; }
         .chart-main-box{ top: 0; right: 0;}
+
+        #sidebar-tree{padding-left: 10px;}
+        #sidebar-tree li a{cursor: pointer;}
     </style>
 </head>
 <body>
