新增关于我们与BI的一些修改

--- a/html/origin.html
+++ b/html/origin.html
@@ -52,6 +52,7 @@
                 <div class="da-sele-box">
                     <select name="" id="db_type">
                         <option value="mysql">mysql</option>
+                        <option value="oracle">oracle</option>
                     </select>
                     <i class="fa fa-caret-down"></i>
                 </div>
