--- a/index.html
+++ b/index.html
@@ -25,14 +25,17 @@
 	<script type="text/javascript" src="plugin/fullpage/examples.js"></script>
 	<script src="js/first.js"></script>
 </head>
-<body>
+<body style="background: #f2f3f4">
 
 <div id="header">
 	<div class="head-bar main">
 		<a href="#">
 			<!--<img src="images/logo.png" alt="" />-->
 		</a>
-		<ul>
+		<ul class="main-parent">
+			<li>
+				<a href="index.html">首页</a>
+			</li>
 			<li>
 				<a href="#">产品</a>
 			</li>
@@ -47,6 +50,15 @@
 			</li>
 			<li>
 				<a href="#">联系我们</a>
+			</li>
+			<li>
+				<a href="#">关于我们</a>
+				<ul class="main-list">
+					<li><a href="html/about/aboutUs.html">企业介绍</a></li>
+					<li><a href="html/about/culture.html">企业文化</a></li>
+					<li><a href="html/about/honey.html">企业资质</a></li>
+					<li><a href="html/about/address.html">企业地址</a></li>
+				</ul>
 			</li>
 		</ul>
 	</div>
