新增联系我们

--- a/html/about/address.html
+++ b/html/about/address.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>深脑大树据</title>
+	<title>深脑大数据</title>
 	<meta name="author" content="Alvaro Trigo Lopez" />
 	<meta name="description" content="fullPage fixed header and footer." />
 	<meta name="keywords"  content="fullpage,jquery,demo,screen,fixed, header,footer, absolute, positioned,css" />
@@ -49,27 +49,27 @@
                     <li>
                         <a href="#">关于我们</a>
                         <ul class="main-list">
-                            <li><a href="aboutUs.html">企业介绍</a></li>
+                            <li><a href="aboutUs.html">公司介绍</a></li>
                             <li><a href="culture.html">企业文化</a></li>
-                            <li><a href="honey.html">企业资质</a></li>
-                            <li><a href="#">企业地址</a></li>
+                            <li><a href="honey.html">公司资质</a></li>
+                            <li><a href="#">公司地址</a></li>
                         </ul>
                     </li>
                 </ul>
             </div>
         </div>
     <div id="about">
-        <h5>你当前所在的位置:深脑大数据>关于我们><span>企业地址</span></h5>
+        <h5>你当前所在的位置:深脑大数据>关于我们><span>公司地址</span></h5>
         <div class="about-list">
             <ul class="about-main">
-                <li>企业介绍<i></i></li>
+                <li>公司介绍<i></i></li>
                 <li>企业文化<i></i></li>
-                <li>企业资质<i></i></li>
-                <li class="active">企业地址<i></i></li>
+                <li>公司资质<i></i></li>
+                <li class="active">公司地址<i></i></li>
             </ul>
             <div>
                 <img src="../../images/about-us.png"/>
-                <h5>企业介绍</h5>
+                <h5>公司介绍</h5>
                 <p class="about-aboutUS">深圳市深脑科技有限公司成立于2017年12月,注册资本100万人民币,公司的主营业务是以物联网、云计算、大数据、人工智能等高新技术为基础,逐步构建以知识图谱为基础的具有自主学习能力的智能感知、智能算法、智能认知、智能预测和智能决策的银行金融业和成产经营企业的大数据智能营销CRM决策平台。</p>
             </div>
             <div>
@@ -87,9 +87,9 @@
                 <p class="about-aboutUS">年销售总收入超过2.5亿RMB,年净利润超过6000万RMB,净利润率24%。</p>
             </div>
             <div class="on">
-                <h5>企业地址</h5>
-                <p class="about-address"><span style="font-weight: 700;">企业名称：</span>深圳深脑大树据有限公司</p>
-                <p class="about-address"><span style="font-weight: 700;">企业电话：</span>0755-26407586</p>
+                <h5>公司地址</h5>
+                <p class="about-address"><span style="font-weight: 700;">公司名称：</span>深圳深脑大数据有限公司</p>
+                <p class="about-address"><span style="font-weight: 700;">公司电话：</span>0755-26407586</p>
                 <div style="width:1000px;height:460px" id="dituContent"></div>              
             </div>
         </div>
@@ -97,7 +97,7 @@
     <div style="clear: both;"></div>
     <div class="about-footer">
         <p>深圳市南山区科技园东方科技大厦816室</p>
-        <p>Copyright ©2017 深圳深脑大树据有限公司 版权所有 粤ICP备 11298888号-6</p>
+        <p>Copyright ©2017 深圳深脑大数据有限公司 版权所有 粤ICP备 11298888号-6</p>
     </div>
 
     <script src="../../plugin/jQuery/jquery.min.js"></script>
