--- a/html/flowChart.html
+++ b/html/flowChart.html
@@ -159,7 +159,7 @@
 		var this_new = true;
 		var this_webComponentId;
 		var this_actionCompType;
-		var $url = ''; ///xdbd-etl
+		var $url = '../xdbd-etl'; ///xdbd-etl
 
 		if (this_onenv == 'dev') {
 			onenv = true;
