--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>深脑大树据</title>
+	<title>深脑大数据</title>
 	<meta name="author" content="Alvaro Trigo Lopez" />
 	<meta name="description" content="fullPage fixed header and footer." />
 	<meta name="keywords"  content="fullpage,jquery,demo,screen,fixed, header,footer, absolute, positioned,css" />
@@ -49,15 +49,15 @@
 				<a href="#">下载</a>
 			</li>
 			<li>
-				<a href="#">联系我们</a>
+				<a class="support-btn" href="#">联系我们</a>
 			</li>
 			<li>
 				<a href="#">关于我们</a>
 				<ul class="main-list">
-					<li><a href="html/about/aboutUs.html">企业介绍</a></li>
+					<li><a href="html/about/aboutUs.html">公司介绍</a></li>
 					<li><a href="html/about/culture.html">企业文化</a></li>
-					<li><a href="html/about/honey.html">企业资质</a></li>
-					<li><a href="html/about/address.html">企业地址</a></li>
+					<li><a href="html/about/honey.html">公司资质</a></li>
+					<li><a href="html/about/address.html">公司地址</a></li>
 				</ul>
 			</li>
 		</ul>
@@ -66,7 +66,7 @@
 <div id="footer" class="hidden">
 	<div class="foot-bar main">
 		<p>深圳市南山区科技园东方科技大厦816室</p>
-		<p>Copyright ©2017 深圳深脑大树据有限公司 版权所有 粤ICP备 11298888号-6</p>
+		<p>Copyright ©2017 深圳深脑大数据有限公司 版权所有 粤ICP备 11298888号-6</p>
 	</div>
 </div>
 
@@ -77,10 +77,10 @@
             <div class="swiper-slide">
             	<div class="section0 section">
             		<div class="video-box">
-            			<video  poster="https://assets.megvii.com/static%2Fimages/home/megvii_video-7a23aa4a33.jpg" autoplay="autoplay" id="video1" loop="loop">
+            			<video  poster="images/megvii_video.jpg" autoplay="autoplay" id="video1" loop="loop">
 				          <source src="plugin/website_main_bg.mp4" type="video/mp4">
 				        </video>
-						<img src="https://assets.megvii.com/static%2Fimages/home/megvii_video-7a23aa4a33.jpg" style="opacity: 0; z-index: -1;">
+						<img src="images/megvii_video.jpg" style="opacity: 0; z-index: -1;">
             		</div>
             		<h1 class="title">大数据平台精准服务</h1>
     				<a href="main.html" class="xdbd-btn">点击进入</a>
@@ -162,6 +162,13 @@
         <!-- Add Pagination -->
         <div class="swiper-pagination"></div>
     </div>
+</div>
+<!-- 联系我们弹窗 -->
+<div class="contact">
+	<div class="contact-block">
+		<a class="contact-btn" href="javascript:;"></a> 
+		<iframe id="contact-iframe" frameborder="0" scrolling="no" style="height: 100%;width: 100%" src="https://mop.kf5.com/kchat/#/message?back=0"></iframe>
+	</div>
 </div>
 
 </body>
