关于我们页面增加联系窗口

--- a/html/about/culture.html
+++ b/html/about/culture.html
@@ -44,7 +44,7 @@
                         <a href="#">下载</a>
                     </li>
                     <li>
-                        <a href="#">联系我们</a>
+                        <a href="#" class="support-btn">联系我们</a>
                     </li>
                     <li>
                         <a href="#">关于我们</a>
@@ -98,6 +98,14 @@
     <div class="about-footer">
         <p>深圳市南山区科技园东方科技大厦816室</p>
         <p>Copyright ©2017 深圳深脑大数据有限公司 版权所有 粤ICP备 11298888号-6</p>
+    </div>
+
+    <!-- 联系我们弹窗 -->
+    <div class="contact">
+        <div class="contact-block">
+            <a class="contact-btn" href="javascript:;"></a> 
+            <iframe id="contact-iframe" frameborder="0" scrolling="no" style="height: 100%;width: 100%" src="https://mop.kf5.com/kchat/#/message?back=0"></iframe>
+        </div>
     </div>
 
     <script src="../../plugin/jQuery/jquery.min.js"></script>
