--- a/html/about/aboutUs.html
+++ b/html/about/aboutUs.html
@@ -44,7 +44,7 @@
                         <a href="#">下载</a>
                     </li>
                     <li>
-                        <a href="#">联系我们</a>
+                        <a href="#" class="support-btn">联系我们</a>
                     </li>
                     <li>
                         <a href="#">关于我们</a>
@@ -100,8 +100,16 @@
         <p>Copyright ©2017 深圳深脑大数据有限公司 版权所有 粤ICP备 11298888号-6</p>
     </div>
 
+    <!-- 联系我们弹窗 -->
+    <div class="contact">
+        <div class="contact-block">
+            <a class="contact-btn" href="javascript:;"></a> 
+            <iframe id="contact-iframe" frameborder="0" scrolling="no" style="height: 100%;width: 100%" src="https://mop.kf5.com/kchat/#/message?back=0"></iframe>
+        </div>
+    </div>
+
     <script src="../../plugin/jQuery/jquery.min.js"></script>
     <script type="text/javascript" src="http://api.map.baidu.com/api?key=&v=1.1&services=true"></script>
-    <script src="../../js/about.js"></script>  
+    <script src="../../js/about.js"></script>
 </body>
 </html>
