新增导航各个页面

--- a/html/about/honey.html
+++ b/html/about/honey.html
@@ -32,19 +32,16 @@
                         <a href="../../index.html">首页</a>
                     </li>
                     <li>
-                        <a href="#">产品</a>
+                        <a href="../navigation/product.html">产品</a>
                     </li>
                     <li>
-                        <a href="#">解决方案</a>
+                        <a href="../navigation/scheme.html">方案</a>
                     </li>
                     <li>
-                        <a href="#">案例</a>
+                        <a href="../navigation/caseShow.html">案例</a>
                     </li>
                     <li>
-                        <a href="#">下载</a>
-                    </li>
-                    <li>
-                        <a href="#" class="support-btn">联系我们</a>
+                        <a class="support-btn" href="#">咨询</a>
                     </li>
                     <li>
                         <a href="#">关于我们</a>
@@ -71,20 +68,39 @@
                 <img src="../../images/about-us.png"/>
                 <h5>公司介绍</h5>
                 <p class="about-aboutUS">深圳市深脑科技有限公司成立于2017年12月,注册资本100万人民币,公司的主营业务是以物联网、云计算、大数据、人工智能等高新技术为基础,逐步构建以知识图谱为基础的具有自主学习能力的智能感知、智能算法、智能认知、智能预测和智能决策的银行金融业和成产经营企业的大数据智能营销CRM决策平台。</p>
-            </div>
-            <div>
-                <img src="../../images/culture.png"/>
                 <h5>技术沉淀</h5>
                 <p class="about-aboutUS">五年专注云计算和大数据平台系统研发(2012-2017)。</p>
                 <p class="about-aboutUS">核心团队成员来自腾讯、华为、百度等IT名企。</p>
+                <h5>经营目标</h5>
+                <p class="about-aboutUS">未来3年,深脑大数据智能营销CRM决策平台经营目标------</p>
+            </div>
+            <div>
+                <img src="../../images/culture.png"/>
+                <p class="about-culture">上善若水&nbsp;&nbsp;德物合一</p>
+                <p class="about-culture">大道至简&nbsp;&nbsp;知行合一</p>
+                <p class="about-culture">道法自然&nbsp;&nbsp;天人合一</p>
+                <h5>价值说明</h5>
+                <p class="about-aboutUS">基于大数据的人工智能平台是风口项目,随着人工智能的技术发展,时长前景非常广阔;本项目包含优秀的大数据ETL/BI平台、大数据交换平台、基于知识图谱的深脑智能营销CRM决策平台和深脑智能营销CRM助手APP。</p>
             </div>
             <div class="on">
                 <img src="../../images/culture.png"/>
-                <h5>价值说明</h5>
-                <p class="about-aboutUS">基于大数据的人工智能平台是风口项目,随着人工智能的技术发展,时长前景非常广阔;本项目包含优秀的大数据ETL/BI平台、大数据交换平台、基于知识图谱的深脑智能营销CRM决策平台和深脑智能营销CRM助手APP。</p>
-                <h5>经营目标</h5>
-                <p class="about-aboutUS">未来3年,深脑大数据智能营销CRM决策平台经营目标------</p>
-                <p class="about-aboutUS">年销售总收入超过2.5亿RMB,年净利润超过6000万RMB,净利润率24%。</p>
+                
+                <dl class="about-aptitude">
+                    <dt><img src="../../images/logo2.png"/></dt>
+                    <dd>国家高新技术企业</dd>
+                </dl>
+                <dl class="about-aptitude">
+                    <dt><img src="../../images/logo3.png"/></dt>
+                    <dd>深圳市软件行业协会会员单位</dd>
+                </dl>
+                <dl class="about-aptitude">
+                    <dt><img src="../../images/logo9.png"/></dt>
+                    <dd>深圳市互联网技术应用协会成员</dd>
+                </dl>
+                <dl class="about-aptitude">
+                    <dt><img src="../../images/logo10.png"/></dt>
+                    <dd>中国互联网协会专家委员会成员</dd>
+                </dl>
             </div>
             <div>
                 <h5>公司地址</h5>
@@ -107,7 +123,7 @@
             <iframe id="contact-iframe" frameborder="0" scrolling="no" style="height: 100%;width: 100%" src="https://mop.kf5.com/kchat/#/message?back=0"></iframe>
         </div>
     </div>
-    
+
     <script src="../../plugin/jQuery/jquery.min.js"></script>
     <script type="text/javascript" src="http://api.map.baidu.com/api?key=&v=1.1&services=true"></script>
     <script src="../../js/about.js"></script>
