--- a/html/flowChart.html
+++ b/html/flowChart.html
@@ -462,7 +462,7 @@
 				success: function (data) {
 					var data = data.data;
 					//console.log(data);
-					            alert(JSON.stringify(data))
+					            //alert(JSON.stringify(data))
 					$.each(data, function () {
 						tables[this.tableName] = this;
 					});
