--- a/index.html
+++ b/index.html
@@ -37,19 +37,16 @@
 				<a href="index.html">首页</a>
 			</li>
 			<li>
-				<a href="#">产品</a>
+				<a href="html/navigation/product.html">产品</a>
 			</li>
 			<li>
-				<a href="#">解决方案</a>
+				<a href="html/navigation/scheme.html">方案</a>
 			</li>
 			<li>
-				<a href="#">案例</a>
+				<a href="html/navigation/caseShow.html">案例</a>
 			</li>
 			<li>
-				<a href="#">下载</a>
-			</li>
-			<li>
-				<a class="support-btn" href="#">联系我们</a>
+				<a class="support-btn" href="#">咨询</a>
 			</li>
 			<li>
 				<a href="#">关于我们</a>
