页面的文案修改

--- a/html/about/address.html
+++ b/html/about/address.html
@@ -69,7 +69,7 @@
                 <h5>公司介绍</h5>
                 <p class="about-aboutUS">深圳市深脑科技有限公司成立于2017年12月,注册资本100万人民币,公司的主营业务是以物联网、云计算、大数据、人工智能等高新技术为基础,逐步构建以知识图谱为基础的具有自主学习能力的智能感知、智能算法、智能认知、智能预测和智能决策的银行金融业和成产经营企业的大数据智能营销CRM决策平台。</p>
                 <h5>技术沉淀</h5>
-                <p class="about-aboutUS">五年专注云计算和大数据平台系统研发(2012-2017)。</p>
+                <p class="about-aboutUS">专注云计算和大数据平台系统研发。</p>
                 <p class="about-aboutUS">核心团队成员来自腾讯、华为、百度等IT名企。</p>
                 <h5>经营目标</h5>
                 <p class="about-aboutUS">未来3年,深脑大数据智能营销CRM决策平台经营目标------</p>
@@ -104,7 +104,7 @@
             </div>
             <div class="on">
                 <h5>公司地址</h5>
-                <p class="about-address"><span style="font-weight: 700;">公司名称：</span>深圳深脑大数据有限公司</p>
+                <p class="about-address"><span style="font-weight: 700;">公司名称：</span>深圳市深脑科技有限公司</p>
                 <p class="about-address"><span style="font-weight: 700;">公司电话：</span>0755-26407586</p>
                 <div style="width:1000px;height:460px" id="dituContent"></div>              
             </div>
@@ -113,7 +113,7 @@
     <div style="clear: both;"></div>
     <div class="about-footer">
         <p>深圳市南山区科技园东方科技大厦816室</p>
-        <p>Copyright ©2017 深圳深脑大数据有限公司 版权所有 粤ICP备 11298888号-6</p>
+        <p>Copyright ©2017 深圳市深脑科技有限公司 版权所有 粤ICP备 11298888号-6</p>
     </div>
 
     <!-- 联系我们弹窗 -->
