--- a/html/navigation/scheme.html
+++ b/html/navigation/scheme.html
@@ -36,7 +36,7 @@
                 <li>
                     <a href="#">关于我们</a>
                     <ul class="main-list">
-                        <li><a href="#">公司介绍</a></li>
+                        <li><a href="../about/aboutUs.html">公司介绍</a></li>
                         <li><a href="../about/culture.html">企业文化</a></li>
                         <li><a href="../about/honey.html">公司资质</a></li>
                         <li><a href="../about/address.html">公司地址</a></li>
@@ -45,7 +45,7 @@
             </ul>
         </div>
     </div>
-    <div class="scheme-head"></div>
+    <div class="scheme-head">为客户提供优质的解决方案</div>
     <div id="scheme">
         <dl class="product-list">
             <dt><img src="../../images/scheme1.png"></dt>
