--- a/html/navigation/caseShow.html
+++ b/html/navigation/caseShow.html
@@ -35,7 +35,7 @@
                 <li>
                     <a href="#">关于我们</a>
                     <ul class="main-list">
-                        <li><a href="#">公司介绍</a></li>
+                        <li><a href="../about/aboutUs.html">公司介绍</a></li>
                         <li><a href="../about/culture.html">企业文化</a></li>
                         <li><a href="../about/honey.html">公司资质</a></li>
                         <li><a href="../about/address.html">公司地址</a></li>
@@ -44,7 +44,7 @@
             </ul>
         </div>
     </div>
-    <div class="case-show-head"></div>
+    <div class="case-show-head">提供多种可选案例</div>
     <div id="case-show" style="overflow: hidden">
         <dl class="case-show-list">
             <dt><img src="../../images/caseShow1.jpg" /></dt>
@@ -69,7 +69,7 @@
     </div>
     <div class="about-footer">
         <p>深圳市南山区科技园东方科技大厦816室</p>
-        <p>Copyright ©2017 深圳深脑大数据有限公司 版权所有 粤ICP备 11298888号-6</p>
+        <p>Copyright ©2017 深圳市深脑科技有限公司 版权所有 粤ICP备 11298888号-6</p>
     </div>
 
     <!-- 联系我们弹窗 -->
