--- a/html/navigation/product.html
+++ b/html/navigation/product.html
@@ -35,7 +35,7 @@
                 <li>
                     <a href="#">关于我们</a>
                     <ul class="main-list">
-                        <li><a href="#">公司介绍</a></li>
+                        <li><a href="../about/aboutUs.html">公司介绍</a></li>
                         <li><a href="../about/culture.html">企业文化</a></li>
                         <li><a href="../about/honey.html">公司资质</a></li>
                         <li><a href="../about/address.html">公司地址</a></li>
@@ -44,7 +44,7 @@
             </ul>
         </div>
     </div>
-    <div class="product-head"></div>
+    <div class="product-head">专注云端大数据平台</div>
     <div id="product">
         <dl class="product-list">
             <dt><img src="../../images/product1.jpg"></dt>
@@ -92,7 +92,7 @@
     </div>
     <div class="about-footer">
         <p>深圳市南山区科技园东方科技大厦816室</p>
-        <p>Copyright ©2017 深圳深脑大数据有限公司 版权所有 粤ICP备 11298888号-6</p>
+        <p>Copyright ©2017 深圳市深脑科技有限公司 版权所有 粤ICP备 11298888号-6</p>
     </div>
 
     <!-- 联系我们弹窗 -->
