--- a/html/about/address.html
+++ b/html/about/address.html
@@ -56,7 +56,7 @@
             </div>
         </div>
     <div id="about">
-        <h5>你当前所在的位置:深脑大数据>关于我们><span>公司地址</span></h5>
+        <h5>你当前所在的位置:关于我们><span>公司地址</span></h5>
         <div class="about-list">
             <ul class="about-main">
                 <li>公司介绍<i></i></li>
