需登录，需登录，

--- a/editBI.html
+++ b/editBI.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="css/default.min.css" />
     <link rel="stylesheet" href="css/form.css" />
 	<link rel="stylesheet" href="css/hyf_test.css">
+	<link rel="stylesheet" href="plugin/mCustomScrollbar/jquery.mCustomScrollbar.css">
 	<!--D3绘图时需要用到的样式文件-->
 	<link rel="stylesheet" href="css/BI_d3.css" />
 
@@ -687,7 +688,7 @@
 				<div class="set-param-box">
 					<!--维度-->
 					<div class="set-param-head"><span>维度</span></div>
-					<div class="dimension-box same-resource">
+					<div class="dimension-box same-resource" id="dimensionBox">
 						<!--原始字段-->
 						<div class="original">
 							<div class="dimension-title">
@@ -1107,6 +1108,8 @@
     <script src="plugin/colorpicker/src/palette-color-picker.min.js"></script>
 	<script src="js/login.js"></script>
 	<script src="plugin/zSize/jquery_zsize.js"></script>
+	<script src="plugin/mCustomScrollbar/jquery.mCustomScrollbar.concat.min.js"></script>
+
 	<!-- 颜色插件 -->
 	<script src="plugin/spectrum/spectrum.js"></script>
 	<script src="plugin/spectrum/docs.js"></script>
